samples/_failures_safe/1761477591_e1b73d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70fb43d2.c: In function ‘print_current_state’:
./samples/SAFE/__tmp_70fb43d2.c:148:13: error: expected identifier at end of input
  148 |             printf("Current state: %s (ID: %d)\n", sm->
      |             ^~~~~~
./samples/SAFE/__tmp_70fb43d2.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70fb43d2.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70fb43d2.c:148:13: error: expected declaration or statement at end of input
